# 7dice

./: .gitignore  Anchor.toml  README.md  package.json
programs/hello/: Cargo.toml
programs/hello/src/: lib.rs
test-ledger/: faucet-keypair.json
test-ledger/rocksdb/: IDENTITY  LOG
tests/: hello.ts
tests/utils/: account-utils.ts  node-wallet.ts
