[package]
name = "hello"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
solana-program = "1.8.1"
switchboard-program = "0.2.0"
switchboard-protos = "0.1.59"
bytemuck = "1.7.3"
switchboard-v2 = "0.1.5"
anchor-spl = "0.19.0"